; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_zlog.c_zlog_stream_set_msg_quoting.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_zlog.c_zlog_stream_set_msg_quoting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zlog_stream = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zlog_stream_set_msg_quoting(%struct.zlog_stream* %0, i64 %1) #0 {
  %3 = alloca %struct.zlog_stream*, align 8
  %4 = alloca i64, align 8
  store %struct.zlog_stream* %0, %struct.zlog_stream** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load %struct.zlog_stream*, %struct.zlog_stream** %3, align 8
  %9 = getelementptr inbounds %struct.zlog_stream, %struct.zlog_stream* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br label %12

12:                                               ; preds = %7, %2
  %13 = phi i1 [ false, %2 ], [ %11, %7 ]
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i32 1, i32 0
  %16 = load %struct.zlog_stream*, %struct.zlog_stream** %3, align 8
  %17 = getelementptr inbounds %struct.zlog_stream, %struct.zlog_stream* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
